--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="keywords" content="Project Template, Project Page">
-    <meta name="description" content="academic-project-page-template-vue">
+    <meta name="description" content="Formation Tracking">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel ="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <title>Academic Project Page Template Vue</title>
+    <link rel ="shortcut icon" type="image/x-icon" href="/favicon.svg">
+    <title>Formation Tracking</title>
   </head>
   <body>
     <div id="app"></div>
